Sun May 24 12:26:50 1998  Per Bothner  <bothner@cygnus.com>

	* num-test.scm:  Added some exact->inexact tests.

Tue Apr 28 21:43:52 1998  Per Bothner  <bothner@cygnus.com>

	* misc-test.scm:  Added test for nested try-finally from
	<Hallvard.Traetteberg@idi.ntnu.no>.

Tue Feb 24 23:08:41 1998  Per Bothner  <bothner@cygnus.com>

	* obj-test.scm:  Add tests for make, (record 'field), and set!.

Thu Feb 19 19:33:57 1998  Per Bothner  <bothner@cygnus.com>

	* misc-test.scm:  Add tests for new-line (CR and CRLF) handling.

Tue Jan 27 11:48:50 1998  Per Bothner  <bothner@cygnus.com>

	* misc-test.scm:  Add tests for try-catch, catch, and throw.

Tue Jan 20 10:26:42 1998  Alberto Petrofsky  <albatros@wco.com>

	* misc-test.scm: Add some reader regression tests.

Mon Jan 19 17:09:38 1998  Per Bothner  <bothner@cygnus.com>

	* num-test.scm:  Add some more regression tests.

Sun Dec 14 17:02:02 1997  Per Bothner  <bothner@cygnus.com>

	* Update for symbol-read-case, defaulting to 'P.

	* num-test.scm:  Added two tests from Norman Hardy <norm@netcom.com>.
	* misc-test.scm:  Add a repression test that used to cause bad warning.
	* Makefile.am (CLEANFILES):  Also remove testing.zip and *.log.

Sun Nov  2 10:05:19 1997  Per Bothner  <bothner@cygnus.com>

	* num-test.scm:  Add a test for inexact->exact and rationalize.
	* Makefile.am:  Pre-compile testing.scm to testing.zip.
	Always do check-obj; remove MISC_1_1.

Thu May 29 15:08:42 1997  Per Bothner  <bothner@cygnus.com>

	* num-test.scm:  Add some tests for magnitude.

Mon May 26 22:00:05 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* num-test.scm:  Add inexact->exact test that detected gcd of 0 bug.
	* Makefile.{am,in}:  Remove unused junk.

Tue May 20 22:16:36 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* num-test.scm:  Add two tests for recently-fixed bugs.

Tue Mar 25 19:37:14 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* mac-test.scm:  Add a test for demacro and gentemp.
