@@ -1,3 +1,11 @@
+Mon Jun 29 17:59:06 1998  Per Bothner  <bothner@cygnus.com>
+
+	* test.scm:  Merged some more code from Jaffar's version.
+	* testing.scm:  Add a work-around for a namespace pollution conflict.
+
+	* polytype.scm: New test, originally written by Marc Feeley.
+	* Makefile.am, Makefile.in: Upadte for new test.
+
 Sun May 24 12:26:50 1998  Per Bothner  <bothner@cygnus.com>
 
 	* num-test.scm:  Added some exact->inexact tests.
